Add Emscripten build support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,22 +13,35 @@ if(NOT DEFINED TRIPLANE_DATA)
     set(TRIPLANE_DATA ".")
 endif()
 
-# Dependencies
-if(NOT EXISTS "${CMAKE_BINARY_DIR}/cmake-modules/FindSDL2.cmake")
-    file(DOWNLOAD "https://github.com/tcbrindle/sdl2-cmake-scripts/raw/master/FindSDL2.cmake"
-        "${CMAKE_BINARY_DIR}/cmake-modules/FindSDL2.cmake")
-endif()
-if(NOT EXISTS "${CMAKE_BINARY_DIR}/cmake-modules/FindSDL2_mixer.cmake")
-    file(DOWNLOAD "https://github.com/tcbrindle/sdl2-cmake-scripts/raw/master/FindSDL2_mixer.cmake"
-        "${CMAKE_BINARY_DIR}/cmake-modules/FindSDL2_mixer.cmake")
+if (${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
+    set(EMCC 1)
 endif()
 
-find_package(SDL2 REQUIRED)
-find_package(SDL2_mixer REQUIRED)
+# Dependencies
+if (NOT EMCC)
+    if(NOT EXISTS "${CMAKE_BINARY_DIR}/cmake-modules/FindSDL2.cmake")
+        file(DOWNLOAD "https://github.com/tcbrindle/sdl2-cmake-scripts/raw/master/FindSDL2.cmake"
+            "${CMAKE_BINARY_DIR}/cmake-modules/FindSDL2.cmake")
+    endif()
+    if(NOT EXISTS "${CMAKE_BINARY_DIR}/cmake-modules/FindSDL2_mixer.cmake")
+        file(DOWNLOAD "https://github.com/tcbrindle/sdl2-cmake-scripts/raw/master/FindSDL2_mixer.cmake"
+            "${CMAKE_BINARY_DIR}/cmake-modules/FindSDL2_mixer.cmake")
+    endif()
+
+    find_package(SDL2 REQUIRED)
+    find_package(SDL2_mixer REQUIRED)
+endif()
 
 # Compiler flags
 if (MSVC)
     add_compile_options(/MP /MT /WX /wd4996)
+elseif (EMCC)
+    # fokker.dks must be separately built or borrowed from elsewhere for EMCC builds - see README!
+    set(USE_FLAGS "-O3 -s ASYNCIFY -s USE_SDL=2 -s -s USE_SDL_MIXER=2 -s TOTAL_MEMORY=32MB --preload-file fokker.dks --shell-file ${CMAKE_SOURCE_DIR}/src/web/shell.html")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${USE_FLAGS}")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${USE_FLAGS}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${USE_FLAGS}")
+    set(CMAKE_EXECUTABLE_SUFFIX .html)
 else()
     # Warnings to be fixed
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
@@ -38,8 +51,13 @@ endif()
 set(COMMON_DEFINITIONS
     TRIPLANE_DATA=\"${TRIPLANE_DATA}\"
     TRIPLANE_VERSION=\"${PROJECT_VERSION}\"
-    TRIPLANE_SP_VERSION=\"${TRIPLANE_SP_VERSION}\"
-    HAVE_SDL_MIXER=1)
+    TRIPLANE_SP_VERSION=\"${TRIPLANE_SP_VERSION}\")
+
+if (NOT EMCC)
+    # EMCC's Mixer does not support used sound format, disable for now
+    set(COMMON_DEFINITIONS
+        HAVE_SDL_MIXER=1)
+endif()
 
 # Common library
 add_library(common STATIC
@@ -72,28 +90,34 @@ endif()
 target_compile_definitions(common PRIVATE
     ${COMMON_DEFINITIONS})
 
+if (NOT EMCC)
+    target_include_directories(common SYSTEM PUBLIC
+        ${SDL2_MIXER_INCLUDE_DIR}
+        ${SDL2_INCLUDE_DIR})
+
+    target_link_libraries(common
+        ${SDL2_LIBRARY}
+        ${SDL2_MIXER_LIBRARIES})
+endif()
+
 target_include_directories(common SYSTEM PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}/src
-    ${SDL2_MIXER_INCLUDE_DIR}
-    ${SDL2_INCLUDE_DIR})
+    ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
-target_link_libraries(common
-    ${SDL2_LIBRARY}
-    ${SDL2_MIXER_LIBRARIES})
+if (NOT EMCC)
+    # DKS data packet creation tool
+    add_executable(dksbuild
+        src/tools/dksbuild/dksbuild.cc)
 
-# DKS data packet creation tool
-add_executable(dksbuild
-    src/tools/dksbuild/dksbuild.cc)
+    # DKS data packet
+    add_custom_command(OUTPUT fokker.dks
+        COMMAND dksbuild ${CMAKE_CURRENT_LIST_DIR}/data/fokker.lst
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_LIST_DIR}/fokker.dks ${CMAKE_BINARY_DIR}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
+        DEPENDS dksbuild)
 
-# DKS data packet
-add_custom_command(OUTPUT fokker.dks
-    COMMAND dksbuild ${CMAKE_CURRENT_LIST_DIR}/data/fokker.lst
-    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_LIST_DIR}/fokker.dks ${CMAKE_BINARY_DIR}
-    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
-    DEPENDS dksbuild)
-
-add_custom_target(generate-dks
-    DEPENDS fokker.dks)
+    add_custom_target(generate-dks
+        DEPENDS fokker.dks)
+endif()
 
 # Triplane executable
 add_executable(${PROJECT_NAME}
@@ -134,7 +158,9 @@ target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE
 target_link_libraries(${PROJECT_NAME}
     common)
 
-add_dependencies(${PROJECT_NAME} generate-dks)
+if (NOT EMCC)
+    add_dependencies(${PROJECT_NAME} generate-dks)
+endif()
 
 if (MSVC)
     target_link_libraries(${PROJECT_NAME} winmm.lib)
@@ -142,24 +168,26 @@ else()
     target_link_libraries(${PROJECT_NAME} m)
 endif()
 
-# Level editor
-add_executable(lvledit
-    src/tools/lvledit/lvledit.cpp)
+if (NOT EMCC)
+    # Level editor
+    add_executable(lvledit
+        src/tools/lvledit/lvledit.cpp)
 
-target_link_libraries(lvledit
-    common
-    ${SDL2_LIBRARY})
+    target_link_libraries(lvledit
+        common
+        ${SDL2_LIBRARY})
 
-target_include_directories(lvledit SYSTEM PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/src
-    ${SDL2_INCLUDE_DIR})
+    target_include_directories(lvledit SYSTEM PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/src
+        ${SDL2_INCLUDE_DIR})
 
-# Image tools
-add_executable(pgdview
-    src/tools/pgdview/pgdview.cpp)
+    # Image tools
+    add_executable(pgdview
+        src/tools/pgdview/pgdview.cpp)
 
-target_link_libraries(pgdview
-    common)
+    target_link_libraries(pgdview
+        common)
 
-add_executable(pcx2pgd
-    src/tools/pcx2pgd/pcx2pgd.cpp)
+    add_executable(pcx2pgd
+        src/tools/pcx2pgd/pcx2pgd.cpp)
+endif()
