Add music support to browser build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,8 +36,10 @@ endif()
 if (MSVC)
     add_compile_options(/MP /MT /WX /wd4996)
 elseif (EMCC)
+    set(MUSIC_DIR "web_music/")
+    file(COPY ${CMAKE_SOURCE_DIR}/${MUSIC_DIR} DESTINATION ${CMAKE_BINARY_DIR}/${MUSIC_DIR})
     # fokker.dks must be separately built or borrowed from elsewhere for EMCC builds - see README!
-    set(USE_FLAGS "-O3 -s ASYNCIFY -s USE_SDL=2 -s USE_SDL_MIXER=2 -s TOTAL_MEMORY=64MB --preload-file fokker.dks --shell-file ${CMAKE_SOURCE_DIR}/src/web/shell.html")
+    set(USE_FLAGS "-O3 -s ASYNCIFY -s USE_SDL=2 -s USE_SDL_MIXER=2 -s TOTAL_MEMORY=64MB --preload-file fokker.dks --preload-file ${MUSIC_DIR} --shell-file ${CMAKE_SOURCE_DIR}/src/web/shell.html")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${USE_FLAGS}")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${USE_FLAGS}")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${USE_FLAGS}")
